--- a/scripts/human-thymus/HumanData_06_DEGs-btw-Tlineages.Rmd
+++ b/scripts/human-thymus/HumanData_06_DEGs-btw-Tlineages.Rmd
@@ -18,26 +18,32 @@ knitr::opts_chunk$set(warning = FALSE, message = FALSE)
 library(ggplot2)
 library(tidyverse)
 library(dplyr)
-library(harmony)
 library(Seurat)
 library(RColorBrewer)
+library(DESeq2)
+library(pheatmap)
+library(ggrepel)
+library(cowplot)
+# library(clusterProfiler)
+# library(enrichplot)
 ```
 
 ```{r import-data}
 # Import seurat object
-seur.human <- readRDS("~/Projects/20220809_Thymic-iNKT-CrossSpecies/data/raw_data/human_data/filtered_seurat_Harmony_07-22-22.RDS")
+seur.human <- readRDS("~/Projects/HumanThymusProject/data/raw_data/human_data/filtered_seurat_harmony.11.22.22.RDS")
+seur.filt <- readRDS("~/Projects/HumanThymusProject/data/CLUSTER/seurat-integration/input/seur_filt_22-12-19.rds")
 
 # Sanity check
-print(seur.human) # 79,801 cells (it's the whole seurat object)
+print(seur.human) # 81,378 cells (it's the whole seurat object)
 
 # Quick visualization
-DimPlot(seur.human)
+DimPlot(seur.human, reduction="UMAP_50", group.by="new_clusters")
 ```
 
 
 
 
-## 2. Compute DEGs between thymic T cell lineages
+## 2. FINDMARKERS
 
 ### 2.1. Identify CD4, CD8, MAIT, NKT, gdT cells
 ```{r identify-cell-types}
@@ -117,3 +123,230 @@ degs.lognorm.nkt %>%
 ```
 
 
+
+
+## 3.  PSEUDOBULK DESEQ2
+
+### 3.1. Prepare data
+Following the tutorial from : https://hbctraining.github.io/scRNA-seq/lessons/pseudobulk_DESeq2_scrnaseq.html
+
+```{r deseq2}
+## ****************
+## IDENTIFY GROUPS FOR DE ANALYSIS
+# Create SingleCellExperiment object
+counts <- seur.filt@assays$RNA@counts
+metadata <- seur.filt@meta.data
+
+# Identify groups for aggregation of counts (we'll group by cell lineage & batch)
+# groups <- colData(sce)[, c("cluster_id", "sample_id")]
+groups <- metadata[,c("Tissue", "Batch", "cell.ident")]
+colnames(groups) <- c("cluster_id", "sample_id", "group_id")
+groups # sanity check
+
+
+## ****************
+## AGGREGATE COUNTS
+# Aggregate counts per cluster and batch
+count.agg <- Matrix.utils::aggregate.Matrix(t(counts), groupings = groups, fun = "sum") 
+# dim(count.agg)
+# count.agg[1:6, 1:6]
+# table(colSums(count.agg) == 0) # check if any gene has total count of 0
+
+# Split aggregated counts matrix into a list: each element of the list is a cell cluster, and it contains the aggregated counts per batch (rows genes, columns batch)
+splitf <- sapply(stringr::str_split(rownames(count.agg), pattern = "_",  n = 2), 
+                 `[`, 1) # create a vector that represents how to split samples
+count.agg <- split.data.frame(count.agg, factor(splitf)) %>%
+  lapply(function(u) magrittr::set_colnames(t(u), stringr::str_extract(rownames(u), "(?<=_)[:graph:]+"))) # create the list
+# class(count.agg)
+# str(count.agg)
+# names(count.agg) # the elements of the list
+# head(count.agg[[1]])
+
+
+## ****************
+## SUBSET METADATA & COUNTS TO POPULATION OF INTEREST
+
+# Create metadata
+metadf <- groups %>%
+  distinct() %>%
+  dplyr::rename(batch=sample_id) %>%
+  mutate(sample_id=paste(batch, group_id, sep="_"))
+rownames(metadf) <- metadf$sample_id
+# Subset the metadata to only the thymocytes
+metadf.deseq <- metadf %>%
+  filter(cluster_id=="Thymus" & group_id %in% c("CD4", "CD8"))
+head(metadf.deseq)
+
+# Subset the counts to only the thymus cells
+counts <- count.agg[["Thymus"]]
+counts.deseq <- data.frame(counts[, which(colnames(counts) %in% rownames(metadf.deseq))])
+
+# Check that the row names of cluster_metadata are the same as the column names of cluster_counts in order to use as input to DESeq2
+all(rownames(metadf.deseq) == colnames(counts.deseq))
+```
+
+
+
+
+### 3.2. Differential expression analysis
+
+
+Now we can create our DESeq2 object to prepare to run the DE analysis. We need to include the counts, metadata, and design formula for our comparison of interest. In the design formula we should also include any other columns in the metadata for which we want to regress out the variation (e.g. batch, sex, age, etc.). We only have our comparison of interest, which is stored as the group_id in our metadata data frame.
+
+```{r create-deseq2-object}
+# Create DESeq2 object
+dds <- DESeqDataSetFromMatrix(counts.deseq, 
+                              colData = metadf.deseq, 
+                              design = ~ group_id) # include the replicate to include batch as another term
+```
+
+
+The next step in the DESeq2 workflow is QC, which includes sample-level and gene-level steps to perform QC checks on the count data to help us ensure that the samples/replicates look good.
+To explore the similarity of our samples, we will be performing sample-level QC using Principal Component Analysis (PCA) and hierarchical clustering methods. Sample-level QC allows us to see how well our replicates cluster together, as well as, observe whether our experimental condition represents the major source of variation in the data. Performing sample-level QC can also identify any sample outliers, which may need to be explored further to determine whether they need to be removed prior to DE analysis.
+When using these unsupervised clustering methods, normalization and log2-transformation of the counts improves the distances/clustering for visualization. DESeq2 uses median of ratios method for count normalization and a regularized log transform (rlog) of the normalized counts for sample-level QC as it moderates the variance across the mean, improving the clustering.
+
+
+```{r deseq2-qc}
+# Transform counts for data visualization
+rld <- rlog(dds, blind=TRUE)
+head(assay(rld))
+
+# Plot PCA
+DESeq2::plotPCA(rld, intgroup = "sample_id")
+DESeq2::plotPCA(rld, intgroup = "group_id")
+# PC1 separates the CD4 & CD8
+
+# Correct for batch effect, and then run PCA
+counts_corrected <- limma::removeBatchEffect(assay(rld), metadf.deseq$batch)
+rv <- matrixStats::rowVars(counts_corrected)
+select_rv <- order(rv, decreasing = TRUE)[seq_len(500)]
+pca <- prcomp(t(counts_corrected[select_rv,]))
+percentVar <- pca$sdev^2/sum(pca$sdev^2)
+counts_pca <- data.frame(PC1 = pca$x[, 1], PC2 = pca$x[, 2],
+                         batch = metadf.deseq$batch,
+                         condition = metadf.deseq$group_id)
+# Plot
+ggplot(counts_pca, aes(x = PC1, y = PC2, color = condition, shape=batch)) +
+  geom_point(size = 4) +
+  xlab(paste0("PC1: ", round(percentVar[1] * 100), "% variance")) +
+  ylab(paste0("PC2: ", round(percentVar[2] * 100), "% variance")) +
+  coord_fixed(expand=TRUE) +
+  scale_y_continuous(expand = c(0.1,0.1))
+
+
+# Compute pairwise correlation values on the batch-effect-corrected matrix
+rld_cor <- cor(counts_corrected[select_rv,])
+# Plot heatmap
+pheatmap(rld_cor, annotation = metadf.deseq[, c("group_id"), drop=F])
+```
+
+
+Differential expression analysis with DESeq2 involves multiple steps as displayed in the flowchart below in blue. Briefly, DESeq2 will model the raw counts, using normalization factors (size factors) to account for differences in library depth. Then, it will estimate the gene-wise dispersions and shrink these estimates to generate more accurate estimates of dispersion to model the counts. Finally, DESeq2 will fit the negative binomial model and perform hypothesis testing using the Wald test or Likelihood Ratio Test.
+All of these steps are performed by running the single DESeq() function on our DESeq2 object created earlier.
+
+```{r, fig.width=5, fig.height=5}
+# Run DESeq2 differential expression analysis
+dds <- DESeq(dds)
+
+# Plot dispersion estimates
+# jpeg("~/Projects/HumanThymusProject/data/human-thymus/HumanData_06_DEGs-btw-Tlineages/dispersion_estimate.jpeg", width=1500, height=1500, res=200)
+plotDispEsts(dds)
+# dev.off()
+
+# Output results of Wald test for contrast for CD4 vs CD8
+contrast <- c("group_id", unique(metadf.deseq$group_id)[1], unique(metadf.deseq$group_id)[2])
+res <- results(dds, 
+               contrast = contrast,
+               alpha = 0.05)
+res <- lfcShrink(dds,
+                 type="ashr",
+                 contrast = contrast,
+                 res=res)
+res # condition CD4 vs CD8 (high log2FC means upregulated in CD4)
+
+# Turn the results object into a tibble for use with tidyverse functions
+res_tbl <- res %>%
+        data.frame() %>%
+        rownames_to_column(var="gene") %>%
+        as_tibble()
+
+
+## KEEP ONLY SIGNIFICANT GENES ##
+# Set threshold
+padj_cutoff <- 0.05
+
+# Subset the significant results
+sig_res <- dplyr::filter(res_tbl, padj < padj_cutoff) %>%
+        dplyr::arrange(padj)
+
+# Check significant genes output
+table(sig_res$log2FoldChange > 0) # 669 upregulated genes in CD4
+sig_res %>%
+  dplyr::arrange(log2FoldChange)
+# Sanity check
+sig_res %>%
+  filter(gene %in% c("RUNX3", "ZBTB7B"))
+```
+
+
+### 3.3. Heatmap
+
+```{r heatmap}
+# Extract normalized counts for only the significant genes
+normalized_counts <- counts(dds, normalized = TRUE)
+sig_norm <- data.frame(normalized_counts) %>%
+  rownames_to_column(var = "gene") %>%
+  dplyr::filter(gene %in% sig_res$gene)
+rownames(sig_norm) <- sig_norm$gene
+        
+# Set a color palette
+heat_colors <- brewer.pal(6, "YlOrRd")
+
+# Run pheatmap using the metadata data frame for the annotation
+path.plots <- "~/Projects/HumanThymusProject/data/human-thymus/HumanData_06_DEGs-btw-Tlineages"
+jpeg(file.path(path.plots, "heatmap_CD4CD8.jpeg"), height = 2000, width = 2000, res = 300)
+pheatmap(sig_norm[,-1], 
+    color = heat_colors,
+    cluster_rows = T,
+    cluster_cols = T,
+    show_rownames = T,
+    fontsize_row = 2,
+    annotation = metadf.deseq[, c("batch", "group_id")],
+    # annotation_colors= list(batch=c("WT" = "#999999", "KO" = "#ef8a62"),
+    #                         group_id=c("KP01"= "#91bfdb", "KP02"="#d8b365")),
+    border_color = NA,
+    fontsize = 10,
+    main= "Thymic cells",
+    scale = "row",
+    height = 20)
+dev.off()
+```
+
+
+### 3.4. Volcano plot
+
+```{r volcano, fig.height=5, fig.width=5}
+## Obtain logical vector where TRUE values denote padj values < 0.05 and fold change > 1.5 in either direction
+res_table_thres <- res_tbl %>%
+  mutate(threshold = padj < 0.05 & abs(log2FoldChange) >= 1)
+
+# Genes to highlight on the volcano plot
+interesting_genes <- res_tbl %>%
+  # filter(gene %in% c("RUNX3", "ZBTB7B"))
+  filter(abs(log2FoldChange) >= 4)
+                  
+## Volcano plot
+ggplot(res_table_thres, aes(x = log2FoldChange, y = -log10(padj))) +
+  geom_point(aes(colour = threshold), alpha=0.5) +
+  geom_text_repel(data = interesting_genes,
+                   aes(label = gene),
+                   force = 2, max.overlaps=30,
+                   nudge_y = 1) +
+  scale_color_manual(values=c("grey", "orange"))+
+  labs(x="log2 fold change", y="-log10 adjusted p-value", title="Thymic CD4 vs CD8 cells") +
+  theme_cowplot()+
+  theme(legend.position = "none",
+          plot.title = element_text(size = rel(1.5), hjust = 0.5),
+          axis.title = element_text(size = rel(1.25))) 
+# ggsave(file.path(path.plots, "volcano_CD4CD8.jpeg"), width=7, height=7, bg="white")
+```
