--- a/scripts/human-thymus/HumanData_11_RegressOutTCRsignaling.Rmd
+++ b/scripts/human-thymus/HumanData_11_RegressOutTCRsignaling.Rmd
@@ -50,33 +50,33 @@ DimPlot(seur.human, reduction="UMAP_50", group.by="new_clusters")+
 
 ```{r tcr-signaling-gene-list}
 # Marker genes cluster 6 ("tcr signaling")
-clus6.markers <- FindMarkers(seur.human, ident.1 = 6, min.pct = 0.25, logfc.threshold = 1.0, only.pos=T) %>%
-  arrange(-avg_log2FC)
-print(clus6.markers)
+# clus6.markers <- FindMarkers(seur.human, ident.1 = 6, min.pct = 0.25, logfc.threshold = 1.0, only.pos=T) %>%
+#   arrange(-avg_log2FC)
+# print(clus6.markers)
 tcrlist1 <- c("NR4A1", "EGR1", "EGR3", "NFKBID", "IRF4", "ICOS", "EGR2", "REL", "HIVEP3", "TRAT1", "NAB2",
               "ID3", "CD5", "TRAC", "SIRPG", "ITPKB", "ZFP36L1")
 
-# TCR signaling genes Pe'er lab (but more associated with CD8 T?...)
-tcrlist2 <- c('ALCAM', 'JAG1', 'LTA', 'CCL3', 'CCL4', 'FOSL1', 'PIM3', 'TNFRSF4', 'TGFB1', 'FURIN', 'CD160', 'GADD45G', 'TNFSF14',
-              'ATF3', 'LCK', 'CD8B', 'NFATC2', 'NFATC1', 'CISH', 'PTGER2', 'TNFSF11', 'TNFRSF21', 'SYP', 'SLC7A1', 'NKG7', 'CRABP2',
-              'SEMA7A', 'IER3', 'SLC16A1', 'RGS16', 'NEK6', 'TNFSF8', 'ZBTB32', 'FOSL2', 'HAVCR2', 'GFI1', 'IL10', 'FOSB', 'IFNG',
-              #'SULT2B1', 'IL17A', #'IL3', 'CCL1', 'CCR8', #'IL17F', #'IL13', #'CSF2', 'IL4',  #'UTF1', #'MIR193A', 'ALPL', 'IL5', 'IL2', # not found in our genes
-              'EGR1', 'TNFRSF9', 'IL21', 'MFSD2A', 'IL24', 'IL15RA', 'NR4A3', 'CD40LG', 'RELA', 'BCAT1', 'XCL1', 'STAT5A', 'MAFF') # list from Pe'er lab
-
-
-# Sanity check which cells have higher expression of those signatures
-test <- AddModuleScore(seur.human, features=list(tcrlist1), name="tcr_score")
-test <- AddModuleScore(test, features=list(tcrlist2), name="tcr_score2")
-
-# Feature plots
-FeaturePlot(test, features="tcr_score1", reduction="UMAP_50") +
-  scale_colour_gradientn(colours = rev(brewer.pal(n = 11, name = "RdBu"))) +
-  labs(title="Gene list cluster 6")
-FeaturePlot(test, features="tcr_score21", reduction="UMAP_50") +
-  scale_colour_gradientn(colours = rev(brewer.pal(n = 11, name = "RdBu"))) +
-  labs(title="Gene list Pe'er lab")
-# Violin plot per cluster
-VlnPlot(test, features = c("tcr_score1", "tcr_score21"))
+# # TCR signaling genes Pe'er lab (but more associated with CD8 T?...)
+# tcrlist2 <- c('ALCAM', 'JAG1', 'LTA', 'CCL3', 'CCL4', 'FOSL1', 'PIM3', 'TNFRSF4', 'TGFB1', 'FURIN', 'CD160', 'GADD45G', 'TNFSF14',
+#               'ATF3', 'LCK', 'CD8B', 'NFATC2', 'NFATC1', 'CISH', 'PTGER2', 'TNFSF11', 'TNFRSF21', 'SYP', 'SLC7A1', 'NKG7', 'CRABP2',
+#               'SEMA7A', 'IER3', 'SLC16A1', 'RGS16', 'NEK6', 'TNFSF8', 'ZBTB32', 'FOSL2', 'HAVCR2', 'GFI1', 'IL10', 'FOSB', 'IFNG',
+#               #'SULT2B1', 'IL17A', #'IL3', 'CCL1', 'CCR8', #'IL17F', #'IL13', #'CSF2', 'IL4',  #'UTF1', #'MIR193A', 'ALPL', 'IL5', 'IL2', # not found in our genes
+#               'EGR1', 'TNFRSF9', 'IL21', 'MFSD2A', 'IL24', 'IL15RA', 'NR4A3', 'CD40LG', 'RELA', 'BCAT1', 'XCL1', 'STAT5A', 'MAFF') # list from Pe'er lab
+# 
+# 
+# # Sanity check which cells have higher expression of those signatures
+# test <- AddModuleScore(seur.human, features=list(tcrlist1), name="tcr_score")
+# test <- AddModuleScore(test, features=list(tcrlist2), name="tcr_score2")
+# 
+# # Feature plots
+# FeaturePlot(test, features="tcr_score1", reduction="UMAP_50") +
+#   scale_colour_gradientn(colours = rev(brewer.pal(n = 11, name = "RdBu"))) +
+#   labs(title="Gene list cluster 6")
+# FeaturePlot(test, features="tcr_score21", reduction="UMAP_50") +
+#   scale_colour_gradientn(colours = rev(brewer.pal(n = 11, name = "RdBu"))) +
+#   labs(title="Gene list Pe'er lab")
+# # Violin plot per cluster
+# VlnPlot(test, features = c("tcr_score1", "tcr_score21"))
 ```
 
 
@@ -88,30 +88,30 @@ VlnPlot(test, features = c("tcr_score1", "tcr_score21"))
 
 ```{r preprocessing-tcr-out}
 # Preprocess without regressing out (for sanity check)
-seur.tcr.in <- NormalizeData(seur.filt)
-seur.tcr.in <- AddModuleScore(seur.tcr.in, features=list(tcrlist1), name="tcr_score")
-seur.tcr.in <- FindVariableFeatures(seur.tcr.in, selection.method="vst", nfeatures=2000)
-seur.tcr.in <- ScaleData(seur.tcr.in)
-seur.tcr.in <- RunPCA(seur.tcr.in, features = tcrlist1, npcs=50, verbose=FALSE)
+# seur.tcr.in <- NormalizeData(seur.filt)
+# seur.tcr.in <- AddModuleScore(seur.tcr.in, features=list(tcrlist1), name="tcr_score", seed=1)
+# seur.tcr.in <- FindVariableFeatures(seur.tcr.in, selection.method="vst", nfeatures=2000)
+# seur.tcr.in <- ScaleData(seur.tcr.in)
+# seur.tcr.in <- RunPCA(seur.tcr.in, features = tcrlist1, npcs=50, verbose=FALSE, approx=FALSE) # use approx=F when too large % of total singular values
 
 
 # Now preprocess while regressing out TCR signaling genes
+seur.tcr.out <- NormalizeData(seur.filt, verbose=T)
+seur.tcr.out <- AddModuleScore(seur.tcr.out, features=list(tcrlist1), name="tcr_score", seed=1, verbose=T)
+seur.tcr.out <- FindVariableFeatures(seur.tcr.out, selection.method="vst", nfeatures=2000, verbose=T)
 set.seed(45)
-seur.tcr.out <- NormalizeData(seur.filt)
-seur.tcr.out <- AddModuleScore(seur.tcr.out, features=list(tcrlist1), name="tcr_score")
-seur.tcr.out <- FindVariableFeatures(seur.tcr.out, selection.method="vst", nfeatures=2000)
-seur.tcr.out <- ScaleData(seur.tcr.out, vars.to.regress="tcr_score1")
-seur.tcr.out <- RunPCA(seur.tcr.out, npcs=50, verbose=FALSE)
+seur.tcr.out <- ScaleData(seur.tcr.out, vars.to.regress="tcr_score1", verbose=T)
+seur.tcr.out <- RunPCA(seur.tcr.out, npcs=50, verbose=T, seed.use=42, approx=FALSE)
 
-seur.tcr.outest <- RunPCA(seur.tcr.out, features = tcrlist1, npcs=50, verbose=FALSE)
-
-# Sanity check how cells separate by tcr_score before/after regressing out tcr_score
-FeaturePlot(seur.tcr.in, features="tcr_score1", order = T) +
-  scale_colour_gradientn(colours = rev(brewer.pal(n = 11, name = "RdYlBu"))) +
-  labs(title="Standard pipeline") |
-FeaturePlot(seur.tcr.outest, features="tcr_score1", order=T) +
-  scale_colour_gradientn(colours = rev(brewer.pal(n = 11, name = "RdYlBu"))) +
-  labs(title="Regressing out TCRsig genes")
+# seur.tcr.outest <- RunPCA(seur.tcr.out, features = tcrlist1, npcs=50, verbose=T, approx=FALSE)
+# 
+# # Sanity check how cells separate by tcr_score before/after regressing out tcr_score
+# FeaturePlot(seur.tcr.in, features="tcr_score1", order = T) +
+#   scale_colour_gradientn(colours = rev(brewer.pal(n = 11, name = "RdYlBu"))) +
+#   labs(title="Standard pipeline") |
+# FeaturePlot(seur.tcr.outest, features="tcr_score1", order=T) +
+#   scale_colour_gradientn(colours = rev(brewer.pal(n = 11, name = "RdYlBu"))) +
+#   labs(title="Regressing out TCRsig genes")
 # ggsave("~/Projects/HumanThymusProject/data/human-thymus/HumanData_11_RegressOutTCRsignaling/PCA_bef_aft_TCRregress.jpeg", width=12, height=6)
 
 
@@ -120,33 +120,38 @@ seur.tcr.out <- RunHarmony(seur.tcr.out, reduction = "pca", max.iter.harmony=30,
 # DimPlot(seur.tcr.out, reduction="pca", group.by="Batch") | DimPlot(seur.tcr.out, reduction="harmony", group.by="Batch")
 # DimPlot(seur.tcr.out, reduction="pca", group.by="Method") | DimPlot(seur.tcr.out, reduction="harmony", group.by="Method")
 ElbowPlot(seur.tcr.out, ndims=50, reduction="harmony")
-seur.tcr.out <- RunUMAP(seur.tcr.out, reduction = "harmony", dims = 1:20, n.neighbors=50)
+seur.tcr.out <- RunUMAP(seur.tcr.out, reduction = "harmony", dims = 1:20, n.neighbors=50, seed.use=42)
 seur.tcr.out <- FindNeighbors(seur.tcr.out, reduction = "harmony", dims = 1:20)
-seur.tcr.out <- FindClusters(seur.tcr.out, resolution = 1.1)
+seur.tcr.out <- FindClusters(seur.tcr.out, resolution = 1.1, random.seed = 0)
 # seur.tcr.out <- AddModuleScore(seur.tcr.out, features=list(tcrlist1), name="tcr_score_out") # useless because it will calculate the score on the "data" slot and not "scale.data"
+
+DimPlot(seur.tcr.out, reduction = "umap", group.by="seurat_clusters", label = TRUE, repel = TRUE)+
+  scale_color_manual(values=colorRampPalette(brewer.pal(12,"Paired"))(19)) +
+  labs(title="Regressing out TCR signaling genes")
+ggsave("~/Desktop/umap2.jpeg", width=8, height=8)
 
 # Re-order clusters
 # table(seur.tcr.out@meta.data[,c("old_clusters", "RNA_snn_res.1.1")])
-seur.tcr.out@meta.data$seurat_clusters <- case_when(
-  seur.tcr.out@meta.data$RNA_snn_res.1.1 == 0 ~ 14,
-  seur.tcr.out@meta.data$RNA_snn_res.1.1 == 1 ~ 16,
-  seur.tcr.out@meta.data$RNA_snn_res.1.1 == 2 ~ 13,
-  seur.tcr.out@meta.data$RNA_snn_res.1.1 == 3 ~ 11,
-  seur.tcr.out@meta.data$RNA_snn_res.1.1 == 4 ~ 8,
-  seur.tcr.out@meta.data$RNA_snn_res.1.1 == 5 ~ 5,
-  seur.tcr.out@meta.data$RNA_snn_res.1.1 == 6 ~ 4,
-  seur.tcr.out@meta.data$RNA_snn_res.1.1 == 7 ~ 12,
-  seur.tcr.out@meta.data$RNA_snn_res.1.1 == 8 ~ 7,
-  seur.tcr.out@meta.data$RNA_snn_res.1.1 == 9 ~ 15,
-  seur.tcr.out@meta.data$RNA_snn_res.1.1 == 10 ~ 9,
-  seur.tcr.out@meta.data$RNA_snn_res.1.1 == 11 ~ 10,
-  seur.tcr.out@meta.data$RNA_snn_res.1.1 == 12 ~ 17,
-  seur.tcr.out@meta.data$RNA_snn_res.1.1 == 13 ~ 3,
-  seur.tcr.out@meta.data$RNA_snn_res.1.1 == 14 ~ 0,
-  seur.tcr.out@meta.data$RNA_snn_res.1.1 == 15 ~ 1,
-  seur.tcr.out@meta.data$RNA_snn_res.1.1 == 16 ~ 6,
-  seur.tcr.out@meta.data$RNA_snn_res.1.1 == 17 ~ 2
-)
+# seur.tcr.out@meta.data$seurat_clusters <- case_when(
+#   seur.tcr.out@meta.data$RNA_snn_res.1.1 == 0 ~ 14,
+#   seur.tcr.out@meta.data$RNA_snn_res.1.1 == 1 ~ 16,
+#   seur.tcr.out@meta.data$RNA_snn_res.1.1 == 2 ~ 13,
+#   seur.tcr.out@meta.data$RNA_snn_res.1.1 == 3 ~ 11,
+#   seur.tcr.out@meta.data$RNA_snn_res.1.1 == 4 ~ 8,
+#   seur.tcr.out@meta.data$RNA_snn_res.1.1 == 5 ~ 5,
+#   seur.tcr.out@meta.data$RNA_snn_res.1.1 == 6 ~ 4,
+#   seur.tcr.out@meta.data$RNA_snn_res.1.1 == 7 ~ 12,
+#   seur.tcr.out@meta.data$RNA_snn_res.1.1 == 8 ~ 7,
+#   seur.tcr.out@meta.data$RNA_snn_res.1.1 == 9 ~ 15,
+#   seur.tcr.out@meta.data$RNA_snn_res.1.1 == 10 ~ 9,
+#   seur.tcr.out@meta.data$RNA_snn_res.1.1 == 11 ~ 10,
+#   seur.tcr.out@meta.data$RNA_snn_res.1.1 == 12 ~ 17,
+#   seur.tcr.out@meta.data$RNA_snn_res.1.1 == 13 ~ 3,
+#   seur.tcr.out@meta.data$RNA_snn_res.1.1 == 14 ~ 0,
+#   seur.tcr.out@meta.data$RNA_snn_res.1.1 == 15 ~ 1,
+#   seur.tcr.out@meta.data$RNA_snn_res.1.1 == 16 ~ 6,
+#   seur.tcr.out@meta.data$RNA_snn_res.1.1 == 17 ~ 2
+# )
 # table(seur.tcr.out@meta.data[,c("seurat_clusters", "RNA_snn_res.1.1")], useNA="ifany") # sanity check
 ```
 
@@ -163,6 +168,7 @@ DimPlot(seur.tcr.out, reduction = "umap", group.by="seurat_clusters", label = TR
   scale_color_manual(values=colorRampPalette(brewer.pal(12,"Paired"))(19)) +
   labs(title="Regressing out TCR signaling genes")
 # ggsave("~/Projects/HumanThymusProject/data/human-thymus/HumanData_11_RegressOutTCRsignaling/lognorm-harmony_TCRsigout_comparisonUMAPs_2000HVGs.jpeg", width=12, height=6)
+# ggsave("~/Projects/HumanThymusProject/data/human-thymus/HumanData_11_RegressOutTCRsignaling/test_approxF_5.jpeg", width=12, height=6)
 
 # Compare cluster labels with Laurent's seurat object
 df <- seur.tcr.out@meta.data[,c("old_clusters", "seurat_clusters")] %>%
